--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "sass": "^1.67.0",
+    "styled-component": "^2.8.0",
+    "styled-components": "^6.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
